<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>ani.rss</groupId>
        <artifactId>ani-rss</artifactId>
        <version>3.0.0</version>
    </parent>

    <artifactId>ani-rss-application</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>ebml-reader</id>
            <url>https://raw.github.com/wushuo894/EBMLReader/mvn-repo</url>
        </repository>
        <repository>
            <id>tmdb-api</id>
            <url>https://raw.github.com/wushuo894/tmdb-api/mvn-repo</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
            <version>4.0.0-M2</version>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        </dependency>
        <dependency>
            <groupId>org.eclipse</groupId>
            <artifactId>bittorrent</artifactId>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>jakarta.mail</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.biezhi</groupId>
            <artifactId>TinyPinyin</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>
        <dependency>
            <groupId>ebml.reader</groupId>
            <artifactId>ebml-reader</artifactId>
        </dependency>
        <dependency>
            <groupId>wushuo.tmdb.api</groupId>
            <artifactId>tmdb-api</artifactId>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
        </dependency>
        <dependency>
            <groupId>ani.rss</groupId>
            <artifactId>ani-rss-ui</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>ani-rss</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>l4j</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <outfile>target/ani-rss.exe</outfile>
                            <jar>target/ani-rss.jar</jar>
                            <errTitle>Java environment is required!</errTitle>
                            <cmdLine>--gui</cmdLine>
                            <chdir>.</chdir>
                            <priority>normal</priority>
                            <downloadUrl>https://adoptium.net/zh-CN/</downloadUrl>
                            <supportUrl>https://whichjdk.com/</supportUrl>
                            <stayAlive>false</stayAlive>
                            <restartOnCrash>false</restartOnCrash>
                            <icon>${project.parent.basedir}/ani-rss-ui/public/favicon.ico</icon>
                            <singleInstance>
                                <mutexName>ani-rss (${project.version})</mutexName>
                                <windowTitle>ani-rss (${project.version})</windowTitle>
                            </singleInstance>
                            <jre>
                                <path>jre/bin;%JAVA_HOME%/bin;%PATH%</path>
                                <minVersion>17</minVersion>
                                <opts>
                                    <opt>-Xms60m -Xmx1g -Xss256k</opt>
                                    <opt>--enable-native-access=ALL-UNNAMED</opt>
                                    <opt>-XX:+UseCompactObjectHeaders</opt>
                                    <opt>-XX:+IgnoreUnrecognizedVMOptions</opt>
                                    <opt>--add-opens=java.base/java.net=ALL-UNNAMED</opt>
                                    <opt>--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileDescription>https://docs.wushuo.top/</fileDescription>
                                <copyright>Copyright (C) 2024-2025</copyright>
                                <productName>${project.artifactId}</productName>
                                <internalName>${project.artifactId}</internalName>
                                <originalFilename>ani-rss.exe</originalFilename>
                                <language>SIMPLIFIED_CHINESE</language>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>generate-resources</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>bash</executable>
                            <arguments>
                                <argument>./generate-resources.sh</argument>
                            </arguments>
                            <workingDirectory>${project.basedir}</workingDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate-md5sum</id>
                        <phase>package</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>ani.rss.build.Md5Sum</mainClass>
                            <systemProperties>
                                <systemProperty>
                                    <key>basedir</key>
                                    <value>${project.basedir}</value>
                                </systemProperty>
                            </systemProperties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
